closes #5